src/tests/variable-declarations/17.txt
variable-declarations/17.c:2:9: error: empty scalar initializer
     int aa = {};
         ^
